# pyosv

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  ruff.toml
.devcontainer/: compose-dev.yaml  devcontainer.json
.issue_forge/: project.sh
benchmarks/: benchmark_dp.py  benchmark_voting2d.py  benchmark_voting3d.py
docs/: 3d_voting.md  acceleration.md  dat_io.md  equivalence_policy.md  f3d_validation.md  f3d_visual_diagnostics.md  implementation_plan.md  orient2d.md  orient3d.md  reference_alignment_3d.md  reference_like_thinning.md  reference_mapping.md  reference_mapping_orient3d.md  reference_mapping_voting3d.md  skinning.md  visualization.md
examples/: report_3d_f3d_multicrop.py  report_3d_f3d_reference.py  report_3d_f3d_scanner.py  report_3d_f3d_seed_diagnostics.py  report_3d_f3d_thinning_ablation.py  run_2d_f3d2d.py  run_2d_reference.py  run_2d_synthetic_scan_vote.py  run_3d_f3d_crop_validation.py  run_3d_f3d_full.py  run_3d_synthetic_scan_vote.py  run_3d_synthetic_skinning.py
tests/: reference_fixtures.py  test_accel.py  test_cells.py  test_dp.py  test_dp_accel.py  test_f3d_large_crop_validation.py  test_f3d_multicrop_report.py  test_f3d_reference_crop_pipeline.py  test_f3d_reference_data.py  test_f3d_reference_metadata.py  test_f3d_scanner_comparison.py  test_f3d_seed_diagnostics.py  test_f3d_thinning_ablation_report.py  test_geometry.py  test_import.py  test_interp_filters.py  test_io.py  test_metrics.py  test_orient2d.py  test_orient3d.py  test_reference_fixture_io.py  test_reference_metadata.py  test_reference_metrics.py  test_report_3d_f3d_reference.py  test_ridge_metrics.py  test_run_2d_f3d2d_example.py  test_run_3d_f3d_crop_validation.py  test_run_3d_f3d_full.py  test_skin.py  test_skinner.py  test_skinner_reference_helpers.py  test_thinning3d.py  test_viz_helpers.py  test_viz_mip_hist.py  test_viz_ridge_overlay.py  test_viz_slices.py  test_voting2d.py  test_voting2d_reference_smoke.py  test_voting3d.py  (+1 more)
(+20 files in other folders)
