[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyosv"
version = "0.1.0"
description = "Python implementation of practical OSV workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
accel = [
    "numba",
]
dev = [
    "pytest",
    "ruff",
]
viz = [
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyosv*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "f3d_reference: explicitly gated F3 3D reference-data validation requiring PYOSV_F3D_DATA_ROOT",
    "slow_reference_voting: explicitly gated reference voting reports requiring PYOSV_REFERENCE_OSV and PYOSV_RUN_SLOW_REFERENCE_VOTING=1",
]
